# autoengine

./: .gitignore  .template.json  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  tbump.toml
docs/source/: conf.py  index.md
notebooks/: hyq.ipynb  run.ipynb  test.db  test.ipynb
notebooks/test/: test.SHARKINP.tmp  test.citations.tmp  test.gbw  test.ges  test.inp  test.int.tmp  test.property.txt
scripts/: cookiecutter-update.sh  init.sh  slurm-cache.sh  slurm-repos.sh
src/autoengine/: __init__.py  adapter.py  run.py  types.py
src/autoengine/core/: __init__.py  query.py  run.py  store.py  utils.py
src/autoengine/hq/: __init__.py  server.py
src/autoengine/qc/: __init__.py  program_output.py  structure.py
tests/: conftest.py  test_adapter.py  test_autoengine.py  test_run.py
