[project]
name = "autoengine"
version = "0.0.1"
authors = [{name = "Andreas V. Copan", email = "avcopan@uga.edu"}]
requires-python = ">= 3.12"
dependencies = [
    "automol>=0.0.11",
    "autostorage>=0.0.7",
    "qcdata>=0.17.0",
    "qccompute>=0.13.0",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build<0.12"]

# Ruff configurations
[tool.ruff]
exclude = [
    "docs",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    "D203",     # confict: incorrect blank line before class (uses D211 instead)
    "D213",     # conflict: multi-line summary second line (uses D212 instead)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Ty configurations
[tool.ty.environment]
python = ".pixi/envs/dev/bin/python"

[tool.ty.src]
include = [
    "src",
    "tests",
]

# Import-linter configurations
[tool.importlinter]
root_package = "autoengine"

[[tool.importlinter.contracts]]
name = "Module Layering"
type = "layers"
layers = [
    "autoengine.layer2",
    "autoengine.layer1",
]

# Pytest configurations
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--cov=autoengine",
    "--cov-report=term-missing",
    "--cov-report=html",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

# Pytest-cov configurations
[tool.coverage.run]
branch = true
source = ["autoengine"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
